tests/ui/traits/const-traits/const-default-method-bodies.stderr
error[E0277]: the trait bound `NonConstImpl: [const] ConstDefaultFn` is not satisfied
  --> $DIR/const-default-method-bodies.rs:25:18
   |
LL |     NonConstImpl.a();
   |                  ^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
